@@ -1,6 +1,12 @@
 v3.3.15 (XXXX-XX-XX)
 --------------------
 
+* added option `--rocksdb.use-file-logging` to enable writing of RocksDB's own
+  informational LOG files into RocksDB's database directory.
+
+  This option is turned off by default, but can be enabled for debugging RocksDB
+  internals and performance.
+
 * improved error messages when managing Foxx services
 
   Install/replace/upgrade will now provide additional information when an error
